[gd_scene load_steps=18 format=3 uid="uid://g510njiavpr0"]

[ext_resource type="Script" path="res://Scripts/PowerUp.gd" id="1_0w10i"]
[ext_resource type="Texture2D" uid="uid://uachftca312i" path="res://Graphics/Effects/CircularDropShadow.png" id="2_oopns"]
[ext_resource type="PackedScene" uid="uid://bvv1o1aml57et" path="res://Scenes/AnimationHandler.tscn" id="3_f2gjf"]
[ext_resource type="Texture2D" path="res://Graphics/Collections/PixelLoot/Seperate/tile345.png" id="3_v06f3"]
[ext_resource type="AudioStream" uid="uid://cvvpmf4m6f4v" path="res://Sounds/Arcade_Collect2.wav" id="4_ujgaf"]
[ext_resource type="Theme" uid="uid://sc8pk13o4m7a" path="res://Themes/DefaultTheme.tres" id="6_wp35o"]
[ext_resource type="Texture2D" uid="uid://b7ymup5mbryhi" path="res://Graphics/Effects/light.png" id="7_xr3l6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rjjjo"]
radius = 32.2587

[sub_resource type="Animation" id="Animation_5gato"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DShadow:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.705882, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_dcab2"]
resource_name = "endOfLife"
length = 5.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DShadow:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.705882, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.705882, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1.1, 1.5, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DIcon:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1.1, 1.5, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jrmoy"]
_data = {
"RESET": SubResource("Animation_5gato"),
"endOfLife": SubResource("Animation_dcab2")
}

[sub_resource type="Animation" id="Animation_belqd"]
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DShadow:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DShadow:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2DShadow:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2DShadow:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.705882, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2DShadow:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.01, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2DShadow:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.01, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2DIcon:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}

[sub_resource type="Animation" id="Animation_sbclm"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DIcon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DShadow:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2DShadow:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2DShadow:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2DShadow:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.6, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2DShadow:scale:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0.02, -0.25, 0, 0.25, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2DShadow:scale:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0.02, -0.25, 0, 0.25, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_204j3"]
_data = {
"RESET": SubResource("Animation_belqd"),
"bounce": SubResource("Animation_sbclm")
}

[sub_resource type="Animation" id="Animation_a6g47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-137.5, -27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5v70u"]
resource_name = "RiseAndFade"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 1.5),
"transitions": PackedFloat32Array(1.03527, 2.92817),
"update": 0,
"values": [Vector2(-137.5, -25.27), Vector2(-137.5, -95.91)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8njn"]
_data = {
"RESET": SubResource("Animation_a6g47"),
"RiseAndFade": SubResource("Animation_5v70u")
}

[node name="PowerUp" type="Area2D"]
z_index = 15
scale = Vector2(4, 4)
collision_layer = 16
collision_mask = 6
input_pickable = false
script = ExtResource("1_0w10i")

[node name="Sprite2DShadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.705882)
position = Vector2(0, 24.57)
scale = Vector2(0.01, 0.01)
texture = ExtResource("2_oopns")

[node name="Sprite2DIcon" type="Sprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(4, 4)
texture = ExtResource("3_v06f3")
region_rect = Rect2(531, 227, 12, 13)

[node name="PoofAnimation" parent="." instance=ExtResource("3_f2gjf")]
visible = false
scale = Vector2(1, 1)

[node name="PickUpAnimation" parent="." instance=ExtResource("3_f2gjf")]
visible = false
scale = Vector2(1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.75)
shape = SubResource("CircleShape2D_rjjjo")

[node name="DeathAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jrmoy")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bounce"
speed_scale = 0.25
libraries = {
"": SubResource("AnimationLibrary_204j3")
}

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ujgaf")
attenuation = 1.1487

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Descriptor" type="Label" parent="."]
visible = false
offset_left = -137.5
offset_top = -27.0
offset_right = 142.5
offset_bottom = 33.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(137, 30)
theme = ExtResource("6_wp35o")
theme_override_font_sizes/font_size = 50
text = "Power Up Effect"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Descriptor"]
libraries = {
"": SubResource("AnimationLibrary_n8njn")
}

[node name="DungeonLight" type="PointLight2D" parent="."]
visible = false
color = Color(1, 0.839216, 0.752941, 1)
energy = 1.1
shadow_enabled = true
texture = ExtResource("7_xr3l6")
texture_scale = 0.4

[connection signal="body_entered" from="." to="." method="_on_PowerUp_body_entered"]
[connection signal="animation_finished" from="PickUpAnimation" to="." method="_on_pick_up_animation_finished"]
[connection signal="animation_finished" from="DeathAnimator" to="." method="_on_death_animator_animation_finished"]
[connection signal="finished" from="PickUpSound" to="." method="_on_pick_up_sound_finished"]
